@@ -1,3 +1,10 @@
+2009-12-09  Alan Modra  <amodra@bigpond.net.au>
+
+	PR ld/11012
+	* emulparams/elf64ppc.sh (OTHER_GOT_RELOC_SECTIONS): Move .rela.opd ..
+	(INITIAL_RELOC_SECTIONS): .. to here.  New define.
+	* scripttempl/elf.sc: Expand INITIAL_RELOC_SECTIONS.
+
 2009-10-14  Andreas Schwab  <schwab@linux-m68k.org>
 
 	* ldlex.l (yy_input): Remove second argument and return the value
